# weaveflow

./: .gitignore  AGENTS.md  README.md  pyproject.toml  troubleshooting.md
docs/: adapter_contracts.md  adapter_event_model.md  adapter_explicit_confirmation.md  adapter_intent_mapping.md  adapter_permission_policy.md  adapter_permission_preflight.md  adapter_pipeline_contract.md  adapter_renderer_policy.md  adapter_response_contract.md  adapter_session_lifecycle.md  adapter_usage_examples.md  channel_adapter_contract.md  confirmation_replay_protection.md  contract_changelog.md  discord_openclaw_weaveflow_poc.md  external_adapter_interface.md  integration_readiness_freeze.md  local_wrapper_flow.md  local_wrapper_restart_session_loss.md  openclaw_adapter_design.md  openclaw_codex_autonomous_session_validation.md  openclaw_integration_gap_analysis.md  openclaw_runtime_research.md  personal_ai_workflow_direction.md  personal_automation_direction.md  poc_openclaw_codex_auto_run_result.md  poc_openclaw_real_invocation_result.md  poc_openclaw_stdio_bridge_plan.md  repository_hygiene.md  stale_confirmation_notifications.md  stdio_bridge_client_contract.md  stdio_bridge_diagnostics_contract.md  stdio_bridge_health_checks.md  stdio_bridge_process_supervision.md  stdio_bridge_protocol.md  wrapper_notification_contract.md  wrapper_result_rendering.md  wrapper_transcript_review.md
examples/: README.md  adapter_channel_rendering_demo.py  adapter_confirmation_demo.py  adapter_event_demo.py  adapter_explicit_confirmation_demo.py  adapter_intent_mapping_demo.py  adapter_renderer_demo.py  (+18 more)
(+199 files in other folders)
